# hass-dreo

./: .bumpversion.cfg  .devcontainer.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVICE_OWNERS.md  HEATERS.md  LICENSE.txt  LOGIN_ISSUE_INVESTIGATION.md  MIGRATION_ANALYSIS.md  PHASE1_MODERNIZE_HA_PATTERNS.md  PHASE2_OPEN_API_ANALYSIS.md  README.md  RELEASE.md  SECURITY.md  SUPPORTED_MODELS.md  TESTING_UNRELEASED.md  commit_msg.txt  contributing.md  coverage.json  hacs.json  pylintrc  pyproject.toml  pytest.ini  requirements.test.txt  requirements.txt  ruff.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  device-feature-request.md  device-feature-request.yml  new-device-request.md  new-device-request.yml
.github/workflows/: ai-code-review-gate.yaml  ci.yaml  common-tests.yaml  copilot-autofix.yml  generate-e2e-test-data.yaml  hacs_validate.yaml  hassfest.yaml  issue-logs-check.yml  issue-template-check.yml  publish.yaml  pytest.yaml  release.yaml  request-copilot-review.yaml  stale.yml
custom_components/dreo/: __init__.py  basedevice.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  const_debug_test_mode.py  debug_test_mode.py  diagnostics.py  dreoairconditioner.py  dreoairpurifier.py  dreobasedevice.py  dreochefmaker.py  dreodehumidifier.py  dreofan.py  dreoheater.py  dreohumidifier.py  dreolight.py  fan.py  haimports.py  humidifer.py  humidifier.py  icons.json  light.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py
custom_components/dreo/e2e_test_data/: HAC005S_1.json  HCF001S_1.json  HEC002S_1.json  HHM001S_1.json  HSH004S_1.json  HSH009S_1.json  get_device_state_HAC001S_1.json  get_device_state_HAC006S_1.json  get_device_state_HAF001S_1.json  get_device_state_HAF003S_1.json  get_device_state_HAF003S_2.json  get_device_state_HAF003S_DEVICE2_OLDER_FW.json  get_device_state_HAP002S_1.json  get_device_state_HCF003S_1.json  get_device_state_HPF005S_1.json  get_device_state_HPF007S_1.json  get_device_state_HPF008S_1.json  get_device_state_HSH003S_1.json  get_device_state_HSH004S_1.json  get_device_state_HSH010S_1.json  get_device_state_HTF005S_1.json  get_device_state_HTF007S_1.json  get_device_state_HTF009S_1.json  get_device_state_HTF010S_1.json  get_device_state_UNKNOWN_1.json  get_device_state_WH714S_1.json  get_devices.json  get_devices_HAF003S.json  get_devices_WH714S.json
custom_components/dreo/pydreo/: __init__.py  commandtransport.py  constant.py  fandefinition.py  helpers.py  models.py  pydreoac.py  pydreoaircirculator.py  pydreoaircirculatorfan.py  pydreoairconditioner.py  pydreoairpurifier.py  pydreobasedevice.py  pydreoceilingfan.py  pydreochefmaker.py  pydreodehumidifier.py  pydreoevaporativecooler.py  pydreofan.py  pydreofanbase.py  pydreoheater.py  pydreohumidifier.py  pydreotowerfan.py  pydreounknowndevice.py
custom_components/dreo/translations/: bg.json  de.json  en.json  es.json  fr.json  it.json  nl.json  pl.json
testScripts/: README.md  deploy_to_ha.py  generateE2ETestData.py  test_basic.py
testScripts/secrets/: .gitignore  credentials.example.py
tests/: __init__.py
tests/dreo/: README.md  conftest.py  custommocks.py  test_airconditioner.py  test_basedevice.py  test_ceilingfan.py  test_climate.py  test_config_flow.py  test_dehumidifier.py  test_diagnostics.py  test_fan.py  test_heater.py  test_humidifer.py  test_init.py  test_light.py  test_number.py  test_sensor.py  test_switch.py  test_translations.py  testdevicebase.py  utils.py
tests/dreo/ui/: .gitignore  (+3 more)
tests/pydreo/: README.md  __init__.py  call_json.py  call_json_fans.py  defaults.py  imports.py  test_all_devices.py  test_commandtransport.py  test_data_completeness.py  test_helpers.py  test_no_hardcoded_models.py  test_pydreo.py  test_pydreoaircirculator.py  test_pydreoairconditioner.py  test_pydreoairpurifier.py  test_pydreobasedevice.py  test_pydreoceilingfan.py  test_pydreochefmaker.py  test_pydreodehumidifier.py  test_pydreoevaporativecooler.py  test_pydreofan.py  test_pydreofanbase.py  test_pydreoheater.py  test_pydreohumidifier.py  test_pydreotowerfan.py  test_send_command.py  test_test.py  test_token_refresh.py  test_uncovered_device_models.py  testbase.py  utils.py
(+181 files in other folders)
