[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pydreo-community"
version = "1.9.21"
description = "Community Python library for the Dreo cloud API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests",
    "websockets",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]

[project.urls]
Homepage = "https://github.com/jeffsteinbok/hass-dreo"
"Bug Tracker" = "https://github.com/jeffsteinbok/hass-dreo/issues"

[tool.setuptools.packages.find]
where = ["custom_components/dreo"]
include = ["pydreo*"]

[tool.bumpversion]
current_version = "1.9.21"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "custom_components/dreo/manifest.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '^version = "{current_version}"'
replace = 'version = "{new_version}"'
